--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center"> Users Details</h2>
+<h2 class="text-center"> User Details</h2>
 <button type="button" class="btn btn-primary"(click)='showBook()'>Show Book Details</button>
 <div class="container">
 <table class="table">
